# WERP_SFI_Prediction

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml  rename_project.yml
data/: 2008-2025_flows.xlsx  MURR_B0H.csv  MURR_P0H.csv  _MURR_B0H000__eFA_annual_stats_10discount.txt  _MURR_P0H000__eFA_annual_stats_10discount.txt
notebooks/: paper_notebook_predict_2012-2024.ipynb  paper_notebook_verif_plotting_v1.ipynb
tests/: test_base.py
werp_sfi_prediction/: __main__.py  base.py  cli.py
