[tool.poetry]
name = "werp-sfi-prediction"
version = "0.1.0"
description = ""
authors = ["David Robertson <david.robertson@csiro.au>", "Andrew Schepen <andrew.schepen@csiro.au"]
readme = "README.md"
packages = [{include = "werp_sfi_prediction"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^7.4.0"
pytest-github-actions-annotate-failures = "^0.2.0"
xarray = "^2025.4.0"
pandas = "^2.3.0"
pymc = "^5.23.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
ipywidgets = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
